--- a/src/main/resources/templates/coachDetails.html
+++ b/src/main/resources/templates/coachDetails.html
@@ -20,7 +20,7 @@
 			<h1 th:text ="${coach.name}+' '+${coach.surname}"></h1>
 		</div>
 		<div class="individual-side-div">
-			<img class="" th:src="@{'/img/coaches/' + ${coach.id} +'.jpg'}" width="100%" height="300px">
+			<img class="" th:src="@{'/uploads/coaches/' + ${coach.id} +'.jpg'}" width="100%" height="300px">
 		</div>
 		<div class="individual-center-div">
 			<table class="custom-table">
