--- a/src/main/resources/templates/post.html
+++ b/src/main/resources/templates/post.html
@@ -109,7 +109,7 @@
 					</div>
 					<div class="form-div">
 						<label>Date</label>
-						<input required="required" type="date"  name="date">
+						<input id="dateEdit" required="required" type="date"  name="date">
 					</div>
 					<div class="form-div">
 						<label>Select file:</label>
