--- a/src/main/resources/templates/publicPosts.html
+++ b/src/main/resources/templates/publicPosts.html
@@ -32,7 +32,7 @@
 					<ul>
 						<li>
 							<a class="" th:href="@{/publicPost/postDetails/(id=${post.id})}">
-		 						<img class="" th:src="@{'/img/posts/' + ${post.id} +'.jpg'}">
+		 						<img class="" th:src="@{'/uploads/posts/' + ${post.id} +'.jpg'}">
 		 					</a>
 		 				</li>
 						<li>
