--- a/src/main/resources/templates/team.html
+++ b/src/main/resources/templates/team.html
@@ -37,7 +37,7 @@
 					<ul>
 						<li>
 							<a class="" th:href="@{/rest/team/teamDetails/(id=${team.id})}">
-		 						<img class="" th:src="@{'/img/teams/' + ${team.id} +'.jpg'}" width="100%" height="200pxpx">
+		 						<img class="" th:src="@{'/uploads/teams/' + ${team.id} +'.jpg'}" width="100%" height="200pxpx">
 		 					</a>
 		 				</li>
 						<li>
