--- a/src/main/resources/templates/teamdetails.html
+++ b/src/main/resources/templates/teamdetails.html
@@ -17,20 +17,20 @@
 	</div>
 	<div class="team-details-cont">
 		<div class="team-picture-cont">
-			<img class="" th:src="@{'/img/teams/' + ${team.id} +'.jpg'}" width="100%" height="auto">
+			<img class="" th:src="@{'/uploads/teams/' + ${team.id} +'.jpg'}" width="100%" height="auto">
 		</div>
 		<div th:if="${coach != null}"  class="team-coach-cont">
 			<div class="team-coach-div">
 				<h3>Coach:</h3>
 					<a th:href="@{/rest/coach/coachDetails/(id=${coach.id})}">
-						<img class="" th:src="@{'/img/coaches/' + ${team.coachId} +'.jpg'}" width="50%" height="auto">	
+						<img class="" th:src="@{'/uploads/coaches/' + ${team.coachId} +'.jpg'}" width="50%" height="auto">	
 					</a>
 				<h4 th:text ="${coach != null} ? ${coach.name}+' '+${coach.surname} : '-'"></h4>
 			</div>
 			<div th:if="${assistantCoach != null}" class="team-coach-div">
 				<h3>Assistant Coach:</h3>
 					<a th:href="@{/rest/coach/coachDetails/(id=${assistantCoach.id})}">
-						<img class="" th:src="@{'/img/coaches/' +  ${team.assistantCoachId} +'.jpg'}" width="50%" height="auto">
+						<img class="" th:src="@{'/uploads/coaches/' +  ${team.assistantCoachId} +'.jpg'}" width="50%" height="auto">
 					</a>
 				<h4 th:text ="${assistantCoach != null} ? ${assistantCoach.name}+' '+${assistantCoach.surname} : '-'"></h4>
 			</div>
@@ -50,7 +50,7 @@
 				<tr th:each="player : ${team.players}">
 					<td >
 						<a class="photo-button" th:href="@{/rest/player/playerDetails/(id=${player.id})}">
- 							<img class="min-images" th:src="@{'/img/players/' + ${player.id} +'.jpg'}" width="60" height="60">
+ 							<img class="min-images" th:src="@{'/uploads/players/' + ${player.id} +'.jpg'}" width="60" height="60">
  						</a>
 					</td>
 					<td th:text="${player.name}"></td>
