--- a/src/main/resources/templates/playerDetails.html
+++ b/src/main/resources/templates/playerDetails.html
@@ -20,7 +20,7 @@
 			<h1 th:text ="${player.name}+' '+${player.surname}"></h1>
 		</div>
 		<div class="individual-side-div">
-			<img class="" th:src="@{'/img/players/' + ${player.id} +'.jpg'}" width="100%" height="300px">
+			<img class="" th:src="@{'/uploads/players/' + ${player.id} +'.jpg'}" width="100%" height="300px">
 		</div>
 		<div class="individual-center-div">
 			<table class="custom-table">
