--- a/src/main/resources/templates/fragments/secureHeader.html
+++ b/src/main/resources/templates/fragments/secureHeader.html
@@ -8,7 +8,7 @@
 	<div class="header-container" th:fragment="secureHeader">
 		<div class="header1">
 			<div class="main-page-title">
-				<h1>Futbola <span class="highlight">Parks</span></h1>
+				<h1>Football <span class="highlight">Club</span></h1>
 			</div>
 			<div class="header-profile-div">
 				<p sec:authorize="isAuthenticated()"><a th:href="@{/userProfile}">Profile</a></p>
@@ -21,7 +21,7 @@
 		<div class="header2">
 				<nav>
 					<ul>
-						<li><a th:href="@{/}">Home</a></li>
+						<li><a th:href="@{/home}">Home</a></li>
 						<li sec:authorize="hasRole('ROLE_ADMIN')"><a href="#">Admin</a>
 							<ul>
 								<li><a th:href="@{/secure/admin/user}">Users</a></li>
