--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -23,7 +23,6 @@ ul {
 }
 
 
-
 a{
 	text-decoration: none;
 	color: black;
@@ -353,6 +352,7 @@ header nav ul li:hover ul {
 	background-color: rgba(255,255,255,0.8);
 	color: #333;
 	padding: 35px;
+	z-index: 1;
 }
 /*need to check this*/
 .slide.current .content{
@@ -378,7 +378,7 @@ header nav ul li:hover ul {
 	border: 2px solid white;
 	background-color: transparent;
 	cursor: pointer;
-	padding: 8px 8px;
+	padding: 10px 10px;
 	border-radius: 50%;
 	outline: none;
 }
@@ -388,7 +388,7 @@ header nav ul li:hover ul {
 	border: 2px solid white;
 	background-color: white;
 	cursor: pointer;
-	padding: 8px 8px;
+	padding: 10px 10px;
 	border-radius: 50%;
 	outline: none;
 }
@@ -886,7 +886,7 @@ footer{
 
 .post-div img{
 	width: 100%;
-	max-height: 150px;
+	height: 100%;
 }
 
 .post-li{
@@ -912,6 +912,10 @@ footer{
 .post-div li{
 	text-decoration: none;
 	display:flex;
+}
+
+.post-desc-div{
+	white-space: pre-wrap;
 }
 
 /*User profile page*/
