--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -19,34 +19,41 @@
 		</div>
 	</section>
 	
+	
 	<section class="news-showcase">
-		<div class="container">
+		<span th:if="${posts == null}"></span>
+		<div th:unless="${posts == null}" class="container">
 			<h1>What`s new</h1>
 			<div class="slider">
 				<div class="slide current">
 					<img  th:src="@{'/uploads/posts/' +${currentPost.id}+ '.jpg'}">
 					<div class="content">
 						<h1 th:text="${currentPost.title}"></h1>
-						<p th:text="${currentPost.description}"></p>
+						<p th:text="${#strings.abbreviate(currentPost.description,100)}"></p>
+						<a th:href="@{/publicPost/postDetails/(id=${currentPost.id})}">Read More</a>
 					</div>
 				</div>
 				<div th:each="post:${posts}" class="slide">
 					<img  th:src="@{'/uploads/posts/' +${post.id}+ '.jpg'}">
 					<div class="content">
 						<h1 th:text="${post.title}"></h1>
-						<p th:text="${post.description}"></p>
+						<p th:text="${#strings.abbreviate(post.description,100)}"></p>
+						<a th:href="@{/publicPost/postDetails/(id=${post.id})}">Read More</a>
 					</div>
 				</div>
+				
 			</div>
-			<div class="navigation-buttons">
-				<button id="next">Next</button>
-				<button id="prev">Prev</button>
+			<span th:if="${posts.size() == 0}" ></span>
+			<div th:unless="${posts.size() == 0}" class="navigation-buttons">
+				<button id="next" th:text="'>'"></button>
+				<button id="prev" th:text="'<'"></button>
 			</div>
 		</div>
 	</section>
-	
+		
 	<section class="players-showcase">
-		<div class="container">
+		<span th:if="${topScorers == null}"></span>
+		<div th:unless="${topScorers == null}" class="container">
 			<h1>Top Scorers</h1>
 				<div th:each="player: ${topScorers}" class="player-box">
 					<img  th:src="@{'/uploads/players/' +${player.id}+ '.jpg'}">
@@ -58,7 +65,8 @@
 				</div>
 		</div>
 		
-		<div class="container">
+		<span th:if="${mostAssists == null}"></span>
+		<div th:unless="${mostAssists == null}" class="container">
 			<h1>Most assists</h1>
 				<div th:each="player: ${mostAssists}" class="player-box">
 					<img  th:src="@{'/uploads/players/' +${player.id}+ '.jpg'}">
@@ -70,7 +78,8 @@
 				</div>
 		</div>
 		
-		<div class="container">
+		<span th:if="${mostMinutes == null}"></span>
+		<div th:unless="${mostMinutes == null}" class="container">
 			<h1>Most minutes</h1>
 				<div th:each="player: ${mostMinutes}" class="player-box">
 					<img  th:src="@{'/uploads/players/' +${player.id}+ '.jpg'}">
