--- a/src/main/resources/templates/publicPosts.html
+++ b/src/main/resources/templates/publicPosts.html
@@ -44,7 +44,8 @@
 					</ul>
 				</div>
 			</div>
-				<div class="paging">
+				<span th:if="${totalPages == 1}"  ></span>
+				<div th:unless="${totalPages == 1}"   class="paging">
 					<span th:each="i: ${#numbers.sequence(1, totalPages)}">
 					    <a th:if="${currentPage != i}" th:href="@{'/publicPost/' + ${i}}">[[${i}]]</a>
 					    <span class="pagging-disabled" th:unless="${currentPage != i}">[[${i}]]</span>
