--- a/src/main/resources/templates/teamdetails.html
+++ b/src/main/resources/templates/teamdetails.html
@@ -23,14 +23,16 @@
 			<div class="team-coach-div">
 				<h3>Coach:</h3>
 					<a th:href="@{/rest/coach/coachDetails/(id=${coach.id})}">
-						<img class="" th:src="@{'/uploads/coaches/' + ${team.coachId} +'.jpg'}" width="50%" height="auto">	
+						<img th:if="${coach.imageExists() == true}" class="" th:src="@{'/uploads/coaches/' + ${team.coachId} +'.jpg'}" width="50%" height="auto">
+						<img th:unless="${coach.imageExists() == true}" class="" th:src="@{'/img/default/default.png'}" width="50%" height="auto">	
 					</a>
 				<h4 th:text ="${coach != null} ? ${coach.name}+' '+${coach.surname} : '-'"></h4>
 			</div>
 			<div th:if="${assistantCoach != null}" class="team-coach-div">
 				<h3>Assistant Coach:</h3>
 					<a th:href="@{/rest/coach/coachDetails/(id=${assistantCoach.id})}">
-						<img class="" th:src="@{'/uploads/coaches/' +  ${team.assistantCoachId} +'.jpg'}" width="50%" height="auto">
+						<img th:if="${assistantCoach.imageExists() == true}" class="" th:src="@{'/uploads/coaches/' +  ${team.assistantCoachId} +'.jpg'}" width="50%" height="auto">
+						<img th:unless="${assistantCoach.imageExists() == true}" class="" th:src="@{'/img/default/default.png'}" width="50%" height="auto">
 					</a>
 				<h4 th:text ="${assistantCoach != null} ? ${assistantCoach.name}+' '+${assistantCoach.surname} : '-'"></h4>
 			</div>
@@ -50,7 +52,8 @@
 				<tr th:each="player : ${team.players}">
 					<td >
 						<a class="photo-button" th:href="@{/rest/player/playerDetails/(id=${player.id})}">
- 							<img class="min-images" th:src="@{'/uploads/players/' + ${player.id} +'.jpg'}" width="60" height="60">
+ 							<img th:if="${player.imageExists() == true}" class="min-images" th:src="@{'/uploads/players/' + ${player.id} +'.jpg'}" width="60" height="60">
+ 							<img th:unless="${player.imageExists() == true}" class="min-images" th:src="@{'/img/default/default.png'}" width="60" height="60">
  						</a>
 					</td>
 					<td th:text="${player.name}"></td>
