--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -74,7 +74,8 @@
 			</form>
 		</div>
 		<div class="admin-center1-div">
-			<span class="delete" th:text="${adminError}"></span>
+			<span class="delete" th:text="${deleteError}"></span>
+			<span class="success" th:text="${add}"></span>
 			<table class="custom-table">
 				<tbody>
 					<tr>
