--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -162,6 +162,7 @@ a{
   	margin: 0px;
   	padding:0px;
   	align-content: center;
+  	border-radius: 50%;
 }
 
 /*header*/
@@ -188,6 +189,20 @@ header p a {
 	background: #333333;
 	display: flex;
 	flex-direction: row;
+}
+
+.header-profile-image{
+	height: 50px;
+	width: 50px;
+	border-radius: 50%;
+	border: 2px solid white;
+}
+
+.header-profile-image:hover{
+	height: 60px;
+	width: 60px;
+	border-radius: 50%;
+	border: 2px solid white;
 }
 
 .main-page-title{
