--- a/src/main/resources/templates/fragments/secureHeader.html
+++ b/src/main/resources/templates/fragments/secureHeader.html
@@ -10,8 +10,13 @@
 			<div class="main-page-title">
 				<h1>Football <span class="highlight">Club</span></h1>
 			</div>
-			<div class="header-profile-div">
-				<p sec:authorize="isAuthenticated()"><a th:href="@{/userProfile}">Profile</a></p>
+			<div sec:authorize="isAuthenticated()" class="header-profile-div">
+				<a th:if="${#authentication.getPrincipal().getUser().imageExists() == true}" th:href="@{/userProfile}">
+					<img class="header-profile-image" th:src="@{'/uploads/users/' + ${#authentication.getPrincipal().getUser().getId()} +'.jpg'}">
+				</a>
+				<a th:unless="${#authentication.getPrincipal().getUser().imageExists() == true}" th:href="@{/userProfile}">
+					<img class="header-profile-image" th:src="@{'/img/default/default.png'}">
+				</a>
 			</div>
 			<div class="header-authorize-div">
 				<p sec:authorize="isAnonymous()" ><a th:href="@{/home}">Login</a></p>
