--- a/src/main/resources/templates/playerDetails.html
+++ b/src/main/resources/templates/playerDetails.html
@@ -21,7 +21,8 @@
 		</div>
 		<div class="individual-side-div">
 			<div class="profile-pic">
-				<img class="" th:src="@{'/uploads/players/' + ${player.id} +'.jpg'}" width="100%" height="300px">
+				<img th:if="${player.imageExists() == true}" class="" th:src="@{'/uploads/players/' + ${player.id} +'.jpg'}" width="100%" height="300px">
+				<img th:unless="${player.imageExists() == true}" class="" th:src="@{'/img/default/default.png'}" width="100%" height="300px">
 			</div>
 		</div>
 		<div class="individual-center-div">
