Added file max size upload function

--- a/src/main/resources/templates/coach.html
+++ b/src/main/resources/templates/coach.html
@@ -117,7 +117,7 @@
 					</div>
 					<div class="form-div">
 						<label>Select image:</label>
-						<input type="file" id="photo" name="file" accept="images/jpeg">
+						<input type="file" id="fileSize" name="file" accept="image/jpeg">
 					</div>
 					<div class="form-div">
 						<button class="modalSaveButton" type="submit">Save</button>
@@ -178,7 +178,7 @@
 					</div>
 					<div class="form-div">
 						<label>Select image:</label>
-						<input type="file" id="photo" name="file" accept="images/jpeg">
+						<input type="file" id="fileSize" name="file" accept="image/jpeg">
 					</div>
 					<div class="form-div">
 						<button class="modalSaveButton" type="submit">Save</button>
