--- a/src/main/resources/templates/post.html
+++ b/src/main/resources/templates/post.html
@@ -40,7 +40,7 @@
 				</div>
 				<div class="form-div">
 					<label>Select image:</label>
-					<input required="required" type="file" id="photo" name="file" accept="images/jpeg">
+					<input required="required" type="file" id="fileSize" name="file" accept="image/jpeg">
 				</div>
 				<div class="form-div">
 					<button class="modalSaveButton" type="submit">Save</button>
@@ -114,7 +114,7 @@
 					</div>
 					<div class="form-div">
 						<label>Select file:</label>
-						<input  type="file" id="fileEdit" name="file" accept="images/*">
+						<input  type="file" id="fileSize" name="file" accept="image/jpeg">
 					</div>
 					<div class="form-div">
 						<button class="modalSaveButton" type="submit">Save</button>
