--- a/src/main/resources/templates/team.html
+++ b/src/main/resources/templates/team.html
@@ -94,7 +94,7 @@
 					</div>
 					<div class="form-div">
 						<label>Select image:</label>
-						<input required="required" type="file" id="photo" name="file" accept="images/jpeg">
+						<input required="required" type="file" id="fileSize" name="file" accept="image/jpeg">
 					</div>
 					<div class="form-div">
 						<button class="modalSaveButton" type="submit">Save</button>
@@ -143,7 +143,7 @@
 					</div>
 					<div class="form-div">
 						<label>Select image:</label>
-						<input type="file" id="photo" name="file" accept="images/jpeg">
+						<input type="file" id="fileSize" name="file" accept="image/jpeg">
 					</div>
 					<div class="form-div">
 						<button class="modalSaveButton" type="submit">Save</button>
