--- a/src/main/resources/templates/player.html
+++ b/src/main/resources/templates/player.html
@@ -149,7 +149,7 @@
 					</div>
 					<div class="form-div">
 						<label>Select image:</label>
-						<input type="file" id="photo" name="file" accept="images/jpeg">
+						<input type="file" id="fileSize" name="file" accept="image/jpeg">
 					</div>
 					<button class="modalSaveButton" type="submit">Save</button>
 				</form>
@@ -235,7 +235,7 @@
 					</div>
 					<div class="form-div">
 						<label>Select image:</label>
-						<input type="file" id="photo" name="file" accept="images/jpeg">
+						<input type="file" id="fileSize" name="file" accept="image/jpeg">
 					</div>
 					<div class="form-div">
 						<button class="modalSaveButton" type="submit">Save</button>
