--- a/src/main/resources/templates/training.html
+++ b/src/main/resources/templates/training.html
@@ -102,7 +102,7 @@
 					</div>
 					<div class="form-div">
 						<label>Select file:</label>
-						<input type="file" id="photo" name="file" accept="images/*">
+						<input type="file" id="fileSize" name="file" accept="application/pdf">
 					</div>
 					<div class="form-div">
 						<button class="modalSaveButton" type="submit">Save</button>
@@ -147,7 +147,7 @@
 					</div>
 					<div class="form-div">
 						<label>Select file:</label>
-						<input type="file" id="fileEdit" name="file" accept="images/jpeg">
+						<input type="file" id="fileSize" name="file" accept="application/pdf">
 					</div>
 					<div class="form-div">
 						<button class="modalSaveButton" type="submit">Save</button>
